<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSmartphoneActivity">


    <TextView
        android:id="@+id/Brand_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="3dp"
        android:padding="10dp"
        android:text="@string/Brand_TextView"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Model_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="3dp"
        android:padding="10dp"
        android:text="@string/Model_TextView"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Brand_TextView" />

    <TextView
        android:id="@+id/Version_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="3dp"
        android:padding="10dp"
        android:text="@string/Version_TextView"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Model_TextView" />

    <TextView
        android:id="@+id/WWW_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="3dp"
        android:padding="10dp"
        android:text="@string/WWW_TextView"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Version_TextView" />

    <EditText
        android:id="@+id/Brand_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:digits=" qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:ems="12"
        android:hint="@string/Hint_Brand_EditText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/Brand_TextView"
        app:layout_constraintLeft_toRightOf="@+id/Version_TextView"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/Model_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:digits=" qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:ems="12"
        android:hint="@string/Hint_Model_EditText"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:maxLines="1"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/Model_TextView"
        app:layout_constraintLeft_toRightOf="@+id/Version_TextView"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/Version_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="12"
        android:hint="@string/Hint_Version_EditText"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:maxLines="1"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/Version_TextView"
        app:layout_constraintLeft_toRightOf="@+id/Version_TextView"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/WWW_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="12"
        android:hint="@string/Hint_WWW_EditText"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:maxLines="1"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/WWW_TextView"
        app:layout_constraintLeft_toRightOf="@+id/Version_TextView"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/Cancel_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="CancelAddingSmartphone"
        android:text="@string/Cancel_Button_Text"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/WWW_EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/WWW_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:onClick="GoToWWW"
        android:text="@string/WWW_Button_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/Cancel_Button"
        app:layout_constraintBottom_toBottomOf="@id/Cancel_Button"/>

    <Button
        android:id="@+id/Save_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="SaveSmartphone"
        android:text="@string/Save_Button_Text"
        app:layout_constraintStart_toEndOf="@id/Cancel_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/WWW_Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>